--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ToDoListApp</string>
+    <string name="things_to_do">things to do</string>
+    <string name="enter_to_do_title">Enter to do title</string>
+    <string name="add_to_do">Add to do</string>
+    <string name="delete_to_do">Delete to do</string>
 </resources>
